[package]
name = "hivemind"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasmtime = "18.0"
candle-core = "0.4.1"
candle-transformers = "0.4.1"
hf-hub = "0.3.2"
tokenizers = "0.15.2"